fix(color): add missing color
color of chart bar

fix #146

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -19,8 +19,8 @@
   --color-transparent: rgba(0, 0, 0, 0);
   --header-height: 60px;
 
-  --bar-default-color: #FFEDAD;
-  --bar-target-color: #c89600;
+  --bar-default-color: #FBF6E5;
+  --bar-target-color: #FFEDAD;
   --bg-revenue-color: #a39ecb;
 
   //quasar variable
